fixes issue 13 where drop box is only element visible untill scene are added

--- a/web/states/details/details.scss
+++ b/web/states/details/details.scss
@@ -2,6 +2,10 @@
     @include justify-content(space-between);
     @include display(flex);
     @include flex-wrap(wrap);
+
+    &.empty {
+        @include flex-wrap(nowrap);
+    }
 }
 
 .scene-nav {
